# azure-search-openai-demo

./: .pre-commit-config.yaml  README.md  azure.yaml  convertdocs.py  locustfile.py  manual_test_plan.md  requirements-dev.txt
.devcontainer/: devcontainer.json
app/backend/: app.py  error.py  mcp_server.py  pyproject.toml  requirements.in  requirements.txt
app/backend/approaches/: approach.py  chatapproach.py  chatreadretrieveread.py  chatreadretrievereadvision.py  times.py
app/backend/approaches/prompts/: ask_answer_question_vision.prompty  chat_answer_question.prompty
app/backend/core/: authentication.py  modelhelper.py
app/backend/prepdocslib/: embeddings.py  htmlparser.py  mediadescriber.py  searchmanager.py
data/: 1-day-in-antigua-where-to-go-what-to-eat.html  5-days-in-socal-catalina-island-joshua.html  README.html  a-browser-based-runner-for-faded.html  a-dev-container-for-sqlalchemy-with.html  a-github-template-for-new-python.html  a-guide-to-writing-backbone-apps-at.html  a-tale-of-two-bootstraps-lessons.html  accessibility-snapshot-testing-for.html  adding-microsoft-graph-authentication.html  appservice.html  attracting-women-to-developer-events.html  automated-accessibility-audits-for.html  azd.html  azure_app_service.html  azure_container_apps.html  best-practices-for-openai-chat-apps-go.html  best-practices-for-openai-chat-apps.html  best-practices-for-openai-chat-apps_16.html  best-practices-for-prompting-github.html  beware-near-enemies-in-life-tech.html  checking-for-technical-requirements-in.html  co-learning-spaces.html  customization.html  (+147 more)
(+170 files in other folders)
